--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -85,6 +85,15 @@
     <img class="mb-4" src="favicon.png" alt="" width="50%" height="50%">
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{index.signup.welocme}">Please sign up</h1>
 
+    <div class="row mb-2">
+        <div class="col">
+            <a href="/" id="a-back"><button onclick="addLocaleUrl('a-back')" type="button" class="btn btn-secondary btn-sm">[[#{index.back}]]</button></a>
+        </div>
+        <div class="col">
+            <a href="/sign-in" id="a-sign-in"><button onclick="addLocaleUrl('a-sign-in')" type="button" class="btn btn-success btn-sm">[[#{index.signIn}]]</button></a>
+        </div>
+    </div>
+
     <!-- 用户名 -->
     <div class="form-group">
         <input type="text" name="userName" class="form-control" id="userName" th:placeholder="#{index.userName}">
@@ -117,15 +126,15 @@
     <!-- 性别 -->
     <div class="custom-control custom-radio custom-control-inline">
         <input class="custom-control-input" type="radio" name="sex" id="boy" value="男">
-        <label class="custom-control-label" for="boy">男</label>
+        <label class="custom-control-label" for="boy">[[#{index.boy}]]</label>
     </div>
     <div class="custom-control custom-radio custom-control-inline">
         <input class="custom-control-input" type="radio" name="sex" id="girl" value="女">
-        <label class="custom-control-label" for="girl">女</label>
+        <label class="custom-control-label" for="girl">[[#{index.girl}]]</label>
     </div>
     <div class="custom-control custom-radio custom-control-inline">
         <input class="custom-control-input" type="radio" name="sex" id="don'tNo" value="保密">
-        <label class="custom-control-label" for="don'tNo">保密</label>
+        <label class="custom-control-label" for="don'tNo">[[#{index.dontnosex}]]</label>
     </div>
 
     <!-- 生日 -->
@@ -154,8 +163,14 @@
         <small id="userSchoolHelp" class="form-text text-muted"></small>
     </div>
 
+    <!--待添加验证码 -->
+
     <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{index.signup}">注册</button>
+
+
     <p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
 </form>
+
+<script src="/js/url.js" type="text/javascript"></script>
 </body>
 </html>
