--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,12 @@
             <li class="nav-item active mx-2">
                 <a class="nav-link" href="#" th:text="#{index.home}">主页<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active mx-2">
+                <a class="nav-link" href="#" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active mx-2">
+                <a class="nav-link" href="#" th:text="#{index.hot}">热门<span class="sr-only">(current)</span></a>
+            </li>
 
             <!-- 搜索 -->
             <form class="form-inline my-2 my-lg-0 mx-2">
@@ -49,13 +55,13 @@
                     Language
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">中文</a>
-                    <a class="dropdown-item" href="#">English</a>
+                    <a class="dropdown-item" th:href="@{/(l='zh-CN')}">中文</a>
+                    <a class="dropdown-item" th:href="@{/(l='en-US')}">English</a>
                 </div>
             </li>
 
             <!-- 新消息提醒 -->
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" style="display: none">
                 <a class="nav-link dropdown-toggle" href="#"
                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{index.message}">
                     消息提醒
@@ -69,9 +75,11 @@
             </li>
 
         </ul>
-        <a href="/sign-in"><button type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
-        <a href="/sign-up"><button type="button" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
+        <a  id="sign-in-a" href="/sign-in"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
+        <a id="sign-up-a" href="/sign-up"><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
     </div>
 </nav>
+
+<script src="/js/url.js" type="text/javascript"></script>
 </body>
 </html>
