--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,11 +60,11 @@
                 </div>
             </li>
 
-            <!-- 新消息提醒 -->
+            <!-- 我 -->
             <li class="nav-item dropdown" style="display: none">
                 <a class="nav-link dropdown-toggle" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{index.message}">
-                    消息提醒
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{index.my}">
+                    我
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
