--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,11 +60,29 @@
                 </div>
             </li>
 
-            <!-- 我 -->
-            <li class="nav-item dropdown" style="display: none">
+            <!-- 消息提醒 -->
+            <li class="nav-item dropdown" th:if="${session.user != null}">
                 <a class="nav-link dropdown-toggle" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{index.my}">
-                    我
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button type="button" class="btn btn-primary">
+                        消息 <span class="badge badge-light">9</span>
+                        <span class="sr-only">unread messages</span>
+                    </button>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
+                    <a class="dropdown-item" href="#" th:text="#{index.setting}">设置</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#" th:text="#{index.signout}">退出登陆</a>
+                </div>
+            </li>
+
+            <!-- 我 -->
+            <li class="nav-item dropdown" th:if="${session.user != null}">
+                <a class="nav-link dropdown-toggle" href="#"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="/image/head/boyhead.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                    [[${session.user.getName()}]]
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
@@ -75,8 +93,11 @@
             </li>
 
         </ul>
-        <a  id="sign-in-a" href="/sign-in"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
-        <a id="sign-up-a" href="/sign-up"><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
+        <ul style="color: transparent" class="navbar-nav justify-content-end" th:if="${session.user != null}">
+            <button type="button" class="btn btn-primary" style="color: transparent; background-color: transparent;border-color: transparent">Primary</button>
+        </ul>
+        <a  id="sign-in-a" href="/sign-in" th:if="${session.user == null}"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
+        <a id="sign-up-a" href="/sign-up" th:if="${session.user == null}"><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
     </div>
 </nav>
 
