--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,7 +82,7 @@
                 <a class="nav-link dropdown-toggle" href="#"
                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img src="/image/head/boyhead.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    [[${session.user.getName()}]]
+                    [[${session.user.getUserName()}]]
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
