--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -12,7 +12,14 @@
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-            // background-image: url("https://api.isoyu.com/bing_images.php");
+        / / background-image: url("https://api.isoyu.com/bing_images.php");
+            background-color: #efefef;
+        }
+
+        .issue-right {
+            border-right-style: solid;
+            border-right-width: 1px;
+            border-right-color: #efefef;
         }
     </style>
 </head>
@@ -24,7 +31,8 @@
         <img src="favicon.png" width="24" height="32" class="d-inline-block align-top" alt="">
         不挂高数社区
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -43,7 +51,8 @@
 
             <!-- 搜索 -->
             <form class="form-inline my-2 my-lg-0 mx-2">
-                <input class="form-control mr-sm-2" type="search" th:placeholder="#{index.search.placeholder}" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" th:placeholder="#{index.search.placeholder}"
+                       aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" th:text="#{index.search}">搜索</button>
             </form>
         </ul>
@@ -51,12 +60,13 @@
         <ul class="navbar-nav justify-content-end">
             <!-- 语言切换 -->
             <li class="nav-item dropdown mx-2">
-                <a class="nav-link" href="#"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
                     Language
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" th:href="@{/(l='zh-CN')}">中文</a>
-                    <a class="dropdown-item" th:href="@{/(l='en-US')}">English</a>
+                    <a class="dropdown-item" th:href="@{/publish(l='zh-CN')}">中文</a>
+                    <a class="dropdown-item" th:href="@{/publish(l='en-US')}">English</a>
                 </div>
             </li>
 
@@ -80,11 +90,12 @@
 
                 <a class="nav-link" href="#"
                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="/image/icon/publish.svg" width="30" height="30" />
+                    <img src="/image/icon/publish.svg" width="30" height="30"/>
                     [[#{index.writePost}]]
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/publish" id="publish-a" onclick="addLocaleUrl('publish-a')" th:text="#{index.issue}">问题</a>
+                    <a class="dropdown-item" href="/publish" id="publish-a" onclick="addLocaleUrl('publish-a')"
+                       th:text="#{index.issue}">问题</a>
                     <div class="dropdown-divider"></div>
 
                 </div>
@@ -101,30 +112,160 @@
                     <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
                     <a class="dropdown-item" href="#" th:text="#{index.setting}">设置</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="addLocaleUrl('sign-out-a')" th:text="#{index.signout}">退出登陆</a>
+                    <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="addLocaleUrl('sign-out-a')"
+                       th:text="#{index.signout}">退出登陆</a>
                 </div>
             </li>
 
         </ul>
 
         <ul style="color: transparent" class="navbar-nav justify-content-end" th:if="${session.user != null}">
-            <button type="button" class="btn btn-primary" style="color: transparent; background-color: transparent;border-color: transparent">Prima</button>
+            <button type="button" class="btn btn-primary"
+                    style="color: transparent; background-color: transparent;border-color: transparent">Prima
+            </button>
         </ul>
 
-        <a  id="sign-in-a" href="/sign-in" th:if="${session.user == null}"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
-        <a id="sign-up-a" href="/sign-up" th:if="${session.user == null}"><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
+        <a id="sign-in-a" href="/sign-in" th:if="${session.user == null}">
+            <button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2"
+                    th:text="#{index.signIn}">登陆
+            </button>
+        </a>
+        <a id="sign-up-a" href="/sign-up" th:if="${session.user == null}">
+            <button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2"
+                    th:text="#{index.signup}">注册
+            </button>
+        </a>
     </div>
 </nav>
 
-<div class="container">
+<!-- 发布页面 -->
+<div class="container" style="height: 30px">
+</div>
+<div class="container" style="background-color: white;">
     <div class="row">
-        <div class="col-xl-9" style="background-color: black;">
-            1 of 2
+        <div class="col-xl-9 mt-3 issue-right">
+            <h2>
+                <img src="image/icon/publish.svg" width="45" height="45"/>
+                [[#{publish.publish}]]
+            </h2>
+            <hr>
+            <form action="/publish" method="post" name="question">
+                <!--问题标题--->
+                <div class="row">
+                    <div class="col-9">
+                        <div class="form-group">
+                            <label for="issues-title">[[#{publish.issue.title}]]</label>
+                            <input name="title" type="text" class="form-control" id="issues-title"
+                                   th:placeholder="#{publish.issue.Title}" th:value="${cacheTitleMsg}">
+                            <small id="titleHelp" class="form-text" style="color: red" th:text="${titleMessage}"></small>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="issues-class">&nbsp;</label>
+                            <select class="form-control" id="issues-class" name="classification">
+                                <option value="null" style="display: none;" selected>
+                                    [[#{publish.classification}]]
+                                </option>
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                            <small id="classHelp" class="form-text" style="color: red" th:text="${classMessage}"></small>
+                        </div>
+                    </div>
+                </div>
+                <!--问题内容--->
+                <div class="form-group mt-2">
+                    <label for="issues-text">[[#{publish.issue.text}]]</label>
+                    <textarea class="form-control" id="issues-text" name="description" rows="6" th:text="${cacheTextMsg}"></textarea>
+                    <small id="textHelp" class="form-text" style="color: red" th:text="${textMessage}"></small>
+                </div>
+
+                <!--上传附件--->
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group mb-3">
+                            <p>[[#{publish.issue.updatefile}]]</p>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="issues-file" name="issuesFile">
+                                <label class="custom-file-label"
+                                       for="issues-file">[[#{publish.issue.chooseFile}]]</label>
+                            </div>
+                            <small id="fileHelp" class="form-text" style="color: red" th:text="${fileMessage}"></small>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <p>&nbsp;</p>
+                        <div class="container small">
+                            支持(Support File) JPG,JPEG,PNG,GIF,ZIP,DOC,DOCX,<br/>PDF,RAR,PSD,PPT,PPTX,XLS,XLSX,APK
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 添加标签 -->
+                <div class="row mt-4">
+                    <div class="col-5">
+                        <div class="form-group">
+                            <label for="issues-tag">[[#{publish.issue.addTag}]]
+                                <!--添加标签：--></label>
+                            <input type="text" class="form-control" id="issues-tag" name="tag"
+                                   th:placeholder="#{publish.issue.splitTag}">
+                            <small id="tagHelp" class="form-text" style="color: red" th:text="${tagMessage}"></small>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!--TODO显示标签-->
+                    </div>
+                </div>
+
+                <!-- 验证码：-->
+                <div class="row mt-4">
+                    <div class="col text-right">
+                        <img src="image/icon/message.svg" width="60" height="40"/>
+                    </div>
+                    <div class="form-group mr-3">
+                        <input type="text" class="form-control" id="issues-CAPTCHA" name="CAPTCHA"
+                               th:placeholder="#{publish.issue.CAPTCHA}">
+                        <small id="CAPTCHAHelp" class="form-text" style="color: red" th:text="${CAPTCHAMessage}"></small>
+                    </div>
+                </div>
+                <!-- 提交 -->
+                <div class="form-group mt-2 text-right">
+
+                    <input type="submit" class="btn btn-success btn-lg" style="width: 200px"
+                           th:value="#{publish.issue.submit}"/>
+                </div>
+            </form>
         </div>
+
         <div class="col">
-            2 of 2
+            <br/>
+            <br/>
+            <h5>问题发起指南</h5>
+            <br/>
+            <small class="text-muted">•<span style="font-weight: bold;">问题标题：</span>请用<span
+                    style="color: red; font-weight: bold;">精简</span>的语言描述您发布的问题，不超过25字。
+            </small>
+            <br/><br/>
+            <small class="text-muted">•<span style="font-weight: bold;">问题补充：</span>详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料。
+            </small>
+            <br/><br/>
+            <small class="text-muted">•<span style="font-weight: bold;">选择标签：</span>选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字。
+            </small>
+            <br/><br/>
+            <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，灌水闲聊请选灌水分类。</small>
+            <br/><br/>
+            <br/><br/>
+            <div class="container" style="">
+                广告位招租
+            </div>
         </div>
     </div>
+</div>
+<div class="container" style="height: 30px">
 </div>
 
 <script src="/js/url.js" type="text/javascript"></script>
