--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -27,7 +27,7 @@
 <!-- 标题栏 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- 标题 logo 和 文本 -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
         <img src="favicon.png" width="24" height="32" class="d-inline-block align-top" alt="">
         不挂高数社区
     </a>
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mx-2">
             <li class="nav-item active mx-2">
-                <a class="nav-link" href="#" th:text="#{index.home}">主页<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/" th:text="#{index.home}">主页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active mx-2">
                 <a class="nav-link" href="#" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
@@ -167,8 +167,8 @@
                                 <option value="null" style="display: none;" selected>
                                     [[#{publish.classification}]]
                                 </option>
-                                <option>1</option>
-                                <option>2</option>
+                                <option value="编程">[[#{publish.classification.program}]]</option>
+                                <option value="水">[[#{publish.classification.water}]]</option>
                                 <option>3</option>
                                 <option>4</option>
                                 <option>5</option>
@@ -199,8 +199,31 @@
                     </div>
                     <div class="col-8">
                         <p>&nbsp;</p>
-                        <div class="container small">
-                            支持(Support File) JPG,JPEG,PNG,GIF,ZIP,DOC,DOCX,<br/>PDF,RAR,PSD,PPT,PPTX,XLS,XLSX,APK
+                        <div class="container">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModalCenter">
+                                [[#{publish.issue.supportFileTitle}]]
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalCenterTitle">[[#{publish.issue.supportFileTitle}]]</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body" th:text="#{publish.issue.supportFile}">
+
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -261,6 +284,37 @@
             <br/><br/>
             <div class="container" style="">
                 广告位招租
+            </div>
+            <br/>
+            <!-- 图片轮播 -->
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href=""><img class="d-block w-100" src="image/101-desktop-wallpaper.png"
+                                        alt="First slide"></a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href=""><img class="d-block w-100" src="image/101-desktop-wallpaper.png"
+                                        alt="Second slide"></a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href=""><img class="d-block w-100" src="image/101-desktop-wallpaper.png"
+                                        alt="Third slide"></a>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </div>
