--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,11 +28,11 @@
 <!-- 标题栏 使用  fixed-top 将标题栏固定在顶部 -->
 <div th:insert="~{navigation :: navbar}"></div>
 
-<!-- 帖子列表显示 -->
+
 <div class="container" style="height: 30px">
 </div>
-
-<div class="container" style="background-color: white;">
+<!-- 帖子列表显示 -->
+<div class="container shadow-sm" style="background-color: white;">
     <div class="row">
         <!-- 左边 -->
         <div class="col-xl-9 mt-3 issue-right">
