--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- 标题 logo 和 文本 -->
         <a class="navbar-brand" href="/" id="link-logo-a" onclick="addLocaleUrl('link-logo-a')">
-            <img src="favicon.png" width="24" height="32" class="d-inline-block align-top" alt="">
+            <img src="/favicon.png" width="24" height="32" class="d-inline-block align-top" alt="">
             不挂高数社区
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
