--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -30,7 +30,8 @@
 <!-- 发布页面 -->
 <div class="container" style="height: 30px">
 </div>
-<div class="container" style="background-color: white;">
+
+<div class="container shadow-sm" style="background-color: white;">
     <div class="row">
         <div class="col-xl-9 mt-3 issue-right">
             <h2>
