--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -92,7 +92,7 @@
                         [[${session.user.getUserName()}]]
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/user/" th:text="#{index.myhome}">我的主页</a>
+                        <a class="dropdown-item" th:href="'/user/' + ${session.user.getUserId()}" th:text="#{index.myhome}">我的主页</a>
                         <a class="dropdown-item" href="#" th:text="#{index.setting}">设置</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="addLocaleUrl('sign-out-a')"
