--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="/favicon.png"/>
     <link rel="bookmark" href="/favicon.png"/>
-    <title>用户主页</title>
+    <title th:text="${user.getUserName() + ' - 不挂高数社区'}"></title>
     <link rel="stylesheet" href="/css/index.css"/>
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
@@ -16,14 +16,8 @@
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-        / / background-image: url("https://api.isoyu.com/bing_images.php");
+        // background-image: url("https://api.isoyu.com/bing_images.php");
             background-color: #efefef;
-        }
-
-        .issue-right {
-            border-right-style: solid;
-            border-right-width: 1px;
-            border-right-color: #efefef;
         }
 
         .container-card {
@@ -161,15 +155,15 @@
 </div>
 
 <!-- 内容 -->
-<div class="container shadow-sm" style="background-color: white;">
+<div class="container" style="background-color: #efefef;">
     <div class="row">
         <!-- 左边 -->
-        <div class="col-xl-9 mt-3 issue-right">
+        <div class="col-xl-9 mt-3 shadow-sm" style="background-color: white;">
             <!-- 帖子列表头 -->
-            <div class="container">
+            <div class="container mt-2 mb-2">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="">动态</a>
+                        <a class="nav-link" th:href="'/user/' + ${user.getUserId()}">动态</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">回复</a>
@@ -183,63 +177,122 @@
                 </ul>
                 <hr style="margin-top: 0%;">
             </div>
+            <!-- 提示 -->
+            <div class="text-center" th:if="${paginationDto.totalPage} == 0">它还没有发布任何动态</div>
 
+            <!-- 帖子 -->
+            <div th:each="question : ${paginationDto.questions}">
+                <div class="media ml-3">
+                    <div class="media-body">
+                        <h5 class="mt-0"><a class="link-to-text" href="#" th:text="${question.title}">中间对齐</a></h5>
+                        <p class="mb-1">Cras sit amet nibh libero</p>
+                        <p class="mb-0 small">
+                            <a class="issuse-question-class" href="#" th:text="${question.classification}">分类</a>
+                            <a class="issuse-question-people" href="#" th:text="${user.userName}">人名</a>
+                            <span class="issuse-question-span">回复了问题
+                                •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
+                                •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
+                                •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
+                                •<span th:text="${question.alterTime}">人数</span><span>时间</span>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <hr/>
+            </div>
+
+            <!-- 页码 -->
+            <nav aria-label="Page navigation example" th:if="${paginationDto.totalPage} != 0">
+                <ul class="pagination justify-content-end">
+                    <!-- 返回首页 -->
+                    <li class="page-item" th:if="${paginationDto.showFirstPage}">
+                        <a class="page-link" id="first-page-a" th:href="'/user/' + ${user.getUserId()}" aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
+                            <span aria-hidden="true">&laquo;&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <!-- 上一页 -->
+                    <li class="page-item" th:if="${paginationDto.showPrevious}">
+                        <a class="page-link" id="link-to-last-a" th:href="'/user/'+ ${user.getUserId()} + @{/(page=${paginationDto.nowPage} - 1)}" aria-label="Previous"
+                           onclick="addLocaleUrlForPage('link-to-last-a')">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+
+
+                    <li class="page-item" th:each="page : ${paginationDto.pages}" th:class="${paginationDto.nowPage == page}? 'page-item active' : 'page-item'">
+                        <a class="page-link" th:href="${'/user/'+user.getUserId()} + @{/(page=${page})}" th:text="${page}" th:id="${page}"
+                           th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
+                            1
+                        </a>
+                    </li>
+
+
+
+                    <!-- 下一页 -->
+                    <li class="page-item" th:if="${paginationDto.showNext}">
+                        <a class="page-link" id="lind-to-next-a" th:href="'/user/'+${user.getUserId()} + @{/(page=${paginationDto.nowPage} + 1)}" aria-label="Next"
+                           onclick="addLocaleUrlForPage('lind-to-next-a')">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                    <!-- 最后一页 -->
+                    <li class="page-item" th:if="${paginationDto.showEndPage}">
+                        <a class="page-link" id="link-to-end-a" th:href="'/user/'+${user.getUserId()} + @{/(page=${paginationDto.totalPage})}" th:if="${paginationDto.showEndPage}"
+                           aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
+                            <span aria-hidden="true">&raquo;&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
+
 
         <!-- 右边 -->
         <div class="col">
             <br/>
-            <p><a class="link-to-text" href="#"><span style="color: red">New!</span>&nbsp;新闻</a></p>
-            <!-- 图片轮播 -->
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
-                                        alt="First slide"></a>
-                    </div>
-                    <div class="carousel-item">
-                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
-                                        alt="Second slide"></a>
-                    </div>
-                    <div class="carousel-item">
-                        <a href=""><img class="d-block w-100" src="/image/101-desktop-wallpaper.png"
-                                        alt="Third slide"></a>
+            <div class="container shadow-sm" style="background-color: white;">
+                <div class="card" style="border: 0px;">
+                    <h5 class="mt-4">个人成就</h5>
+                    <hr/>
+                    <div class="card-body mb-2">
+                        <img src="/image/icon/like.svg" width="20" height="20">获得<span>100</span>次点赞
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
             <br/>
-            <h5>热门话题</h5>
-
-            <small class="text-muted">•<span style="font-weight: bold;">问题标题：</span>请用<span
-                    style="color: red; font-weight: bold;">精简</span>的语言描述您发布的问题，不超过25字。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">问题补充：</span>详细补充您的问题内容，并确保问题描述清晰直观,
-                并提供一些相关的资料。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">选择标签：</span>选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字。
-            </small>
-            <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，灌水闲聊请选灌水分类。</small>
-            <br/><br/>
-            <br/><br/>
-            <div class="container" style="">
-                广告位招租
+            <div class="card shadow-sm" style="background-color: white; border: 0px">
+                <div class="row" style="text-align: center;">
+                    <br/>
+                    <div class="col mt-4" >
+                        <p>关注了</p>
+                        <div class="card-body mb-2">
+                            <h5>100</h5>
+                        </div>
+                    </div>
+                    <div class="col mt-4">
+                        <p>关注者</p>
+                        <div class="card-body mb-2">
+                            <h5>100</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <br/>
+            <div class="container shadow-sm" style="background-color: white;">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">关注的问题</li>
+                    <li class="list-group-item">关注的话题</li>
+                    <li class="list-group-item">最新回复</li>
+                    <li class="list-group-item">邀请我的问题</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
+            </div>
+
+
         </div>
     </div>
     <div class="container" style="height: 30px">
